crates/ic-ptree/defs/cidl/constants.h

enum PlacementKind { BEGIN_FILE, BEFORE_DECLARATION, BEGIN_DECLARATION, END_DECLARATION, AFTER_DECLARATION, END_FILE };
enum numeric_kind {
    UNDEF_KIND,
    BOOLEAN_KIND,
    INT8_KIND,
    OCTET_KIND,
    SHORT_KIND,
    USHORT_KIND,
    LONG_KIND,
    ULONG_KIND,
    LONGLONG_KIND,
    ULONGLONG_KIND,
    FLOAT_KIND,
    DOUBLE_KIND,
    CHAR_KIND,
    STRING_KIND,
    PTREE_KIND
};
const char* numeric_kind_str(enum numeric_kind val);
struct numeric;
enum node_kind {
    N_UNDEF,
    N_INCLUDE,    
    N_PRIMITIVE,  
    N_NATIVE,     
    N_MODULE,     
    N_STRUCT,     
    N_UNION,      
    N_VALUETYPE,  
    N_INTERFACE,  
    N_EXCEPTION,  
    N_ENUM,       
    N_BITSET,     
    N_BITMASK,    
    N_CASE,       
    N_NULL,       
    N_MEMBER,     
    N_PROTOTYPE,  
    N_SEQUENCE,  
    N_MAP,       
    N_ARRAY,     
    N_STRING,    
    N_FIXED,     
    N_ALIAS,     
    N_CONST,     
    N_ANNOTATION_DEF,  
    N_ANNOTATION       
};
const char* node_kind_str(enum node_kind kind);
enum ptree_opts {
    OPT_DECLARATION = (1 << 0),
    OPT_IN = (1 << 1),
    OPT_OUT = (1 << 2),
    OPT_INOUT = (OPT_IN | OPT_OUT),
    OPT_READONLY = (1 << 3),
    OPT_PRIVATE = (1 << 4),
    OPT_DEFAULT = (1 << 5),  
    OPT_HAS_CHILDREN = (1 << 6),
    OPT_ENUMERATED = (1 << 7),
    OPT_EMIT_CODE = (1 << 8),
    OPT_SYSTEM_INCLUDE = (1 << 9),
    OPT_CIRCULAR = (1 << 10),
    OPT_SEQUENCE_LENGTH = (1 << 11),
    OPT_CONST_VALUE = (1 << 12),      
    OPT_ANONYMOUS_ALIAS = (1 << 13),  
    OPT_RUST_TRIVIAL = (1 << 14),      
    OPT_RUST_TOTAL_ORDER = (1 << 15),  
    OPT_LOCAL = (1 << 16),
    OPT_BUILTIN = (1 << 17),  
};
struct ptree;
void clear_namespace_nodes(void);
extern enum node_kind ANY_KIND[];
INTERCOM_PUBLIC extern struct numeric num_undef;
const struct numeric* expr_convert(const struct numeric* value, enum numeric_kind kind);
INTERCOM_PUBLIC extern struct ptree boolean_type;
INTERCOM_PUBLIC extern struct ptree int8_type;
INTERCOM_PUBLIC extern struct ptree octet_type;
INTERCOM_PUBLIC extern struct ptree char_type;
INTERCOM_PUBLIC extern struct ptree wchar_type;
INTERCOM_PUBLIC extern struct ptree short_type;
INTERCOM_PUBLIC extern struct ptree ushort_type;
INTERCOM_PUBLIC extern struct ptree long_type;
INTERCOM_PUBLIC extern struct ptree ulong_type;
INTERCOM_PUBLIC extern struct ptree longlong_type;
INTERCOM_PUBLIC extern struct ptree ulonglong_type;
INTERCOM_PUBLIC extern struct ptree float_type;
INTERCOM_PUBLIC extern struct ptree double_type;
INTERCOM_PUBLIC extern struct ptree ldouble_type;
INTERCOM_PUBLIC extern struct ptree fixed_type;
INTERCOM_PUBLIC extern struct ptree unbounded_string_type;
INTERCOM_PUBLIC extern struct ptree unbounded_wstring_type;
INTERCOM_PUBLIC extern struct ptree any_type;
INTERCOM_PUBLIC extern struct ptree object_type;
INTERCOM_PUBLIC extern struct ptree* annotation_type_id;
INTERCOM_PUBLIC extern struct ptree* annotation_type_autoid;
INTERCOM_PUBLIC extern struct ptree* annotation_type_optional;
INTERCOM_PUBLIC extern struct ptree* annotation_type_position;
INTERCOM_PUBLIC extern struct ptree* annotation_type_value;
INTERCOM_PUBLIC extern struct ptree* annotation_type_empty;
INTERCOM_PUBLIC extern struct ptree* annotation_type_extensibility;
INTERCOM_PUBLIC extern struct ptree* annotation_type_final;
INTERCOM_PUBLIC extern struct ptree* annotation_type_mutable;
INTERCOM_PUBLIC extern struct ptree* annotation_type_appendable;
INTERCOM_PUBLIC extern struct ptree* annotation_type_shared;
INTERCOM_PUBLIC extern struct ptree* annotation_type_key;
INTERCOM_PUBLIC extern struct ptree* annotation_type_must_understand;
INTERCOM_PUBLIC extern struct ptree* annotation_type_default;
INTERCOM_PUBLIC extern struct ptree* annotation_type_default_literal;
INTERCOM_PUBLIC extern struct ptree* annotation_type_range;
INTERCOM_PUBLIC extern struct ptree* annotation_type_min;
INTERCOM_PUBLIC extern struct ptree* annotation_type_max;
INTERCOM_PUBLIC extern struct ptree* annotation_type_unit;
INTERCOM_PUBLIC extern struct ptree* annotation_type_bit_bound;
INTERCOM_PUBLIC extern struct ptree* annotation_type_external;
INTERCOM_PUBLIC extern struct ptree* annotation_type_nested;
INTERCOM_PUBLIC extern struct ptree* annotation_type_verbatim;
INTERCOM_PUBLIC extern struct ptree* annotation_type_service;
INTERCOM_PUBLIC extern struct ptree* annotation_type_topic;
INTERCOM_PUBLIC extern struct ptree* annotation_type_dds_service;
INTERCOM_PUBLIC extern struct ptree* annotation_type_dds_request_topic;
INTERCOM_PUBLIC extern struct ptree* annotation_type_dds_reply_topic;
INTERCOM_PUBLIC extern struct ptree* annotation_type_oneway;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ami;
INTERCOM_PUBLIC extern struct ptree* annotation_type_bitset_old;
INTERCOM_PUBLIC extern struct ptree* annotation_type_bit_bound_old;
INTERCOM_PUBLIC extern struct ptree* annotation_type_must_understand_old;
INTERCOM_PUBLIC extern struct ptree* annotation_type_minimum_type_check_old;
INTERCOM_PUBLIC extern struct ptree* annotation_type_hashid;
INTERCOM_PUBLIC extern struct ptree* annotation_type_default_nested;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ignore_literal_names;
INTERCOM_PUBLIC extern struct ptree* annotation_type_try_construct;
INTERCOM_PUBLIC extern struct ptree* annotation_type_non_serialized;
INTERCOM_PUBLIC extern struct ptree* annotation_type_data_representation;
INTERCOM_PUBLIC extern struct ptree* annotation_type_doc;
INTERCOM_PUBLIC extern struct ptree* annotation_type_merge;
INTERCOM_PUBLIC extern struct ptree* annotation_type_const;
INTERCOM_PUBLIC extern struct ptree* annotation_type_static;
INTERCOM_PUBLIC extern struct ptree* annotation_type_derive;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_rename;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_builder;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_doc;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_minimum_type_check;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_suppress;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_no_constructor;
INTERCOM_PUBLIC extern struct ptree* annotation_type_ext_no_serializer;