crates/ic-ptree/src/sys.rs

// @generated
// Copyright 2024 KONGSBERG
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice,
//    this list of conditions and the following disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice,
//    this list of conditions and the following disclaimer in the documentation
//    and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors
//    may be used to endorse or promote products derived from this software
//    without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND
// ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
// WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

#![allow(
    non_upper_case_globals,
    non_camel_case_types,
    non_snake_case,
    clippy::all,
    clippy::unreadable_literal,
    unused
)]
/* automatically generated by rust-bindgen 0.71.1 */

pub const BEGIN_FILE: PlacementKind = 0;
pub const BEFORE_DECLARATION: PlacementKind = 1;
pub const BEGIN_DECLARATION: PlacementKind = 2;
pub const END_DECLARATION: PlacementKind = 3;
pub const AFTER_DECLARATION: PlacementKind = 4;
pub const END_FILE: PlacementKind = 5;
pub type PlacementKind = ::std::os::raw::c_uint;
pub const UNDEF_KIND: numeric_kind = 0;
pub const BOOLEAN_KIND: numeric_kind = 1;
pub const INT8_KIND: numeric_kind = 2;
pub const OCTET_KIND: numeric_kind = 3;
pub const SHORT_KIND: numeric_kind = 4;
pub const USHORT_KIND: numeric_kind = 5;
pub const LONG_KIND: numeric_kind = 6;
pub const ULONG_KIND: numeric_kind = 7;
pub const LONGLONG_KIND: numeric_kind = 8;
pub const ULONGLONG_KIND: numeric_kind = 9;
pub const FLOAT_KIND: numeric_kind = 10;
pub const DOUBLE_KIND: numeric_kind = 11;
pub const CHAR_KIND: numeric_kind = 12;
pub const STRING_KIND: numeric_kind = 13;
pub const PTREE_KIND: numeric_kind = 14;
pub type numeric_kind = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn numeric_kind_str(val: numeric_kind) -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct numeric {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct parser_state {
    _unused: [u8; 0],
}
pub const N_UNDEF: node_kind = 0;
pub const N_INCLUDE: node_kind = 1;
pub const N_PRIMITIVE: node_kind = 2;
pub const N_NATIVE: node_kind = 3;
pub const N_MODULE: node_kind = 4;
pub const N_STRUCT: node_kind = 5;
pub const N_UNION: node_kind = 6;
pub const N_VALUETYPE: node_kind = 7;
pub const N_INTERFACE: node_kind = 8;
pub const N_EXCEPTION: node_kind = 9;
pub const N_ENUM: node_kind = 10;
pub const N_BITSET: node_kind = 11;
pub const N_BITMASK: node_kind = 12;
pub const N_CASE: node_kind = 13;
pub const N_NULL: node_kind = 14;
pub const N_MEMBER: node_kind = 15;
pub const N_PROTOTYPE: node_kind = 16;
pub const N_SEQUENCE: node_kind = 17;
pub const N_MAP: node_kind = 18;
pub const N_ARRAY: node_kind = 19;
pub const N_STRING: node_kind = 20;
pub const N_FIXED: node_kind = 21;
pub const N_ALIAS: node_kind = 22;
pub const N_CONST: node_kind = 23;
pub const N_ANNOTATION_DEF: node_kind = 24;
pub const N_ANNOTATION: node_kind = 25;
pub type node_kind = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn node_kind_str(kind: node_kind) -> *const ::std::os::raw::c_char;
}
pub const OPT_DECLARATION: ptree_opts = 1;
pub const OPT_IN: ptree_opts = 2;
pub const OPT_OUT: ptree_opts = 4;
pub const OPT_INOUT: ptree_opts = 6;
pub const OPT_READONLY: ptree_opts = 8;
pub const OPT_PRIVATE: ptree_opts = 16;
#[doc = "!< default case in union"]
pub const OPT_DEFAULT: ptree_opts = 32;
pub const OPT_HAS_CHILDREN: ptree_opts = 64;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_ENUMERATED: ptree_opts = 128;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_EMIT_CODE: ptree_opts = 256;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_SYSTEM_INCLUDE: ptree_opts = 512;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_CIRCULAR: ptree_opts = 1024;
#[doc = " enum member with explicit value, != the implicit value e.g. \"enum E { V0, V1 = 1, \
         ENUMERATED\n = 5, V3 };\" \\note also applied to the enum node, if any members have it"]
pub const OPT_SEQUENCE_LENGTH: ptree_opts = 2048;
#[doc = "!< node in struct numeric i.e. part of complex value"]
pub const OPT_CONST_VALUE: ptree_opts = 4096;
#[doc = "!< e.g. the element_type of \"sequence<\\@optional int8>\""]
pub const OPT_ANONYMOUS_ALIAS: ptree_opts = 8192;
pub const OPT_RUST_TRIVIAL: ptree_opts = 16384;
pub const OPT_RUST_TOTAL_ORDER: ptree_opts = 32768;
pub const OPT_LOCAL: ptree_opts = 65536;
pub const OPT_BUILTIN: ptree_opts = 131072;
pub type ptree_opts = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ptree {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn clear_namespace_nodes(state: *mut parser_state);
}
unsafe extern "C" {
    pub static mut ANY_KIND: [node_kind; 0usize];
}
unsafe extern "C" {
    pub static mut num_undef: numeric;
}
unsafe extern "C" {
    pub fn expr_convert(
        state: *mut parser_state,
        value: *const numeric,
        kind: numeric_kind,
    ) -> *const numeric;
}
unsafe extern "C" {
    pub static mut boolean_type: ptree;
}
unsafe extern "C" {
    pub static mut int8_type: ptree;
}
unsafe extern "C" {
    pub static mut octet_type: ptree;
}
unsafe extern "C" {
    pub static mut char_type: ptree;
}
unsafe extern "C" {
    pub static mut wchar_type: ptree;
}
unsafe extern "C" {
    pub static mut short_type: ptree;
}
unsafe extern "C" {
    pub static mut ushort_type: ptree;
}
unsafe extern "C" {
    pub static mut long_type: ptree;
}
unsafe extern "C" {
    pub static mut ulong_type: ptree;
}
unsafe extern "C" {
    pub static mut longlong_type: ptree;
}
unsafe extern "C" {
    pub static mut ulonglong_type: ptree;
}
unsafe extern "C" {
    pub static mut float_type: ptree;
}
unsafe extern "C" {
    pub static mut double_type: ptree;
}
unsafe extern "C" {
    pub static mut ldouble_type: ptree;
}
unsafe extern "C" {
    pub static mut fixed_type: ptree;
}
unsafe extern "C" {
    pub static mut unbounded_string_type: ptree;
}
unsafe extern "C" {
    pub static mut unbounded_wstring_type: ptree;
}
unsafe extern "C" {
    pub static mut any_type: ptree;
}
unsafe extern "C" {
    pub static mut object_type: ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_id: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_autoid: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_optional: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_position: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_value: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_empty: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_extensibility: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_final: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_mutable: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_appendable: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_shared: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_key: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_must_understand: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_default: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_default_literal: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_range: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_min: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_max: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_unit: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_bit_bound: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_external: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_nested: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_verbatim: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_service: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_topic: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_dds_service: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_dds_request_topic: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_dds_reply_topic: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_oneway: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ami: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_bitset_old: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_bit_bound_old: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_must_understand_old: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_minimum_type_check_old: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_hashid: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_default_nested: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ignore_literal_names: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_try_construct: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_non_serialized: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_data_representation: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_doc: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_merge: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_const: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_static: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_derive: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_rename: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_builder: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_doc: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_minimum_type_check: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_suppress: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_no_constructor: *mut ptree;
}
unsafe extern "C" {
    pub static mut annotation_type_ext_no_serializer: *mut ptree;
}
